--- a/src/assets/css/farmagest.css
+++ b/src/assets/css/farmagest.css
@@ -148,3 +148,11 @@
 .custom-input {
   width: 130px;
 }
+
+.floating-alert {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 9999;
+}
